API: UPDATE Compte
